# agent-tools

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  agent-tools.yaml  pyproject.toml
docs/: discovery-problem.md
src/agent_tools/: __init__.py  _async_helpers.py  _core.py  _template.py  cli.py  mcp_client.py  registry.py  server.py
tests/: __init__.py  conftest.py  test_async_helpers.py  test_cli.py  test_functional.py  test_mcp_client.py  test_readme.py  test_registry.py  test_server.py
tests/test_agent/: test_begin.py  test_extract.py  test_start_here.py
tests/test_code/: __init__.py  test_analyze.py  test_architecture.py  test_complexity.py  test_formatters.py  test_lint.py  test_parsers.py  test_refactor.py
tests/test_cursor/: __init__.py  test_create_command.py  test_sync_commands.py
tests/test_docs/: __init__.py  test_write_findings.py
tests/test_git/: __init__.py  test_commit.py  test_update_prs.py
tests/test_github/: __init__.py  test_my_prs.py
tests/test_mcp/: __init__.py  test_add.py  test_connect.py  test_disconnect.py  test_inspect.py  test_list.py  test_remove.py
tests/test_notes/: __init__.py  test_todo.py
tests/test_observe/: __init__.py  test_log.py  test_session.py  test_trace_call.py
tests/test_registry/: __init__.py  test_reload.py  test_tools.py
tests/test_think/: __init__.py  test_about.py
tool_defs/_servers/: github.yaml
tool_defs/agent/: begin.yaml  extract.yaml  start-here.yaml
tool_defs/code/: analyze.yaml  architecture.yaml  complexity.yaml  lint.yaml  refactor.yaml
tool_defs/cursor/: create-command.yaml  sync-commands.yaml
tool_defs/docs/: write-findings.yaml
tool_defs/git/: commit.yaml  update-prs.yaml
tool_defs/github/: my-prs.yaml
tool_defs/mcp/: add.yaml  connect.yaml  disconnect.yaml  inspect.yaml  list.yaml  remove.yaml
(+53 files in other folders)
